# openai_study_mode_clone

./: .gitignore  Dockerfile  HUGGINGFACE_SETUP.md  README.md  db_data.ipynb  pyproject.toml
src/openai_study_mode_clone/: __init__.py  app.py  chainlit.md
src/openai_study_mode_clone/agents_services/: base_agent.py  study_agent.py
src/openai_study_mode_clone/config/: llm_model_config.py
