[project]
name = "openai-study-mode-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Umer", email = "razzaq6047@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.3.3",
]

[project.scripts]
openai-study-mode-clone = "openai_study_mode_clone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
